trybuild-qcell/src/compiletest/lcell_generativity-03.stderr
error[E0597]: `tag` does not live long enough
  --> src/compiletest/lcell_generativity-03.rs:8:5
   |
8  |     make_guard!(guard2);
   |     ^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `tag` declared here
...
14 | }
   | -
   | |
   | `tag` dropped here while still borrowed
   | borrow might be used here, when `_guard` is dropped and runs the `Drop` code for type `main::make_guard`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in the macro `make_guard` (in Nightly builds, run with -Z macro-backtrace for more info)
